# render.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
render/: Cargo.toml
render/src/: fragment.rs  html.rs  html_escaping.rs  lib.rs  numbers.rs  render.rs  renderable.rs  simple_element.rs  text_element.rs
render_macros/: Cargo.toml
render_macros/src/: child.rs  children.rs  element.rs  element_attribute.rs  element_attributes.rs  function_component.rs  lib.rs  tags.rs
render_tests/: Cargo.toml
render_tests/src/: lib.rs
render_tests/ui/fail/: unclosed-tag-complex.rs  unclosed-tag-complex.stderr  unclosed-tag.rs  unclosed-tag.stderr  unexpected-attribute.rs  unexpected-attribute.stderr
