[package]
name = "render"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render_macros = { path = "../render_macros" }

[dev-dependencies]
pretty_assertions = "0.6"
