[package]
name = "render"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2018"
description = "A safe and simple template engine with the ergonomics of JSX"
readme = "../README.md"
repository = "https://github.com/Schniz/render.rs"
keywords = ["jsx", "rsx", "html", "render", "template"]
categories = ["template-engine"]
licesne = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render_macros = { path = "../render_macros", version = "0.1" }

[dev-dependencies]
pretty_assertions = "0.6"
